--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Resp Rate</string>
+    <string name="app_name">Breathing System</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Test Methods</string>
     <string name="title_activity_display_message">Auth User</string>
@@ -9,8 +9,6 @@
 
     <!-- values for register page -->
     <string name="title_activity_register">Register</string>
-    <string name="reg_user_name">User Name</string>
-    <string name="reg_password">Password</string>
 
     <!-- values for authentication -->
     <string name="user_name">User Name</string>
@@ -23,5 +21,9 @@
     <string name="title_activity_breathing">Breathing</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_patient">PatientActivity</string>
+    <string name="title_activity_graphing">Graphing</string>
+    <string name="title_activity_patients_list_graph">Patients List Graph</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
 
 </resources>
