added activity after login to select between view graph or create new breathing rate

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="title_activity_patients_list_graph">Patients List Graph</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="title_activity_post_login">PostLoginActivity</string>
 
 </resources>
